--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="pXtWzs4NHU2lBcpoIX_AFt8KKDJtIWeWLipkVHUay5A" />
+    <meta name="yandex-verification" content="570e2aa30e554dac" />
     <meta name="description" content="Госпожа Эвелин слив фото. Эвелин слитые фотки девушки поразили всех. Госпожа Эвелин слив 2024 года архив.">
     <meta name="keywords" content="Эвелин слив фото">
     <meta name="author" content="Эвелин">
